fix: hack for Dockasaurus bug with preserving dark mode

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -77,6 +77,52 @@
 
 html[data-theme="dark"] {
   --color-border: color-mix(in oklab, var(--color-text) 50%, transparent);
+  /* Ensure DocSearch/Autocomplete dark tokens are available immediately */
+  --docsearch-text-color: #c4c7dc;
+  --docsearch-secondary-text-color: #b6b7d5;
+  --docsearch-subtle-color: #212139;
+  --docsearch-error-color: #ef5350;
+  --docsearch-success-color: rgba(67, 160, 71, 0.2);
+  --docsearch-highlight-color: #457aff;
+  --docsearch-focus-color: #9ac8ff;
+  --docsearch-background-color: #36395a;
+  --docsearch-icon-color: #b6b7d5;
+  --docsearch-container-background: rgba(9, 10, 17, 0.8);
+  --docsearch-modal-background: #15172a;
+  --docsearch-modal-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309;
+  --docsearch-searchbox-background: #000000a6;
+  --docsearch-searchbox-focus-background: #000000a6;
+  --docsearch-hit-color: #bec3c9;
+  --docsearch-hit-shadow: none;
+  --docsearch-hit-background: #090a11;
+  --docsearch-key-background: #36395a;
+  --docsearch-key-color: #b6b7d5;
+  --docsearch-key-pressed-shadow: inset 0 2px 4px rgba(12, 13, 20, 0.4);
+  --docsearch-footer-background: #000000a6;
+  --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5),
+    0 -4px 8px 0 rgba(0, 0, 0, 0.2);
+  --docsearch-logo-color: #fff;
+  --docsearch-muted-color: #7f8497;
+  --shimmer-bg: linear-gradient(
+    90deg,
+    #e0e3e8 0%,
+    var(--docsearch-muted-color) 20%,
+    var(--docsearch-muted-color) 60%,
+    #e0e3e8 95%
+  );
+  --aa-text-color-rgb: 183, 192, 199;
+  --aa-primary-color-rgb: 146, 138, 255;
+  --aa-muted-color-rgb: 146, 138, 255;
+  --aa-input-background-color-rgb: 0, 3, 9;
+  --aa-background-color-rgb: 21, 24, 42;
+  --aa-selected-color-rgb: 146, 138, 255;
+  --aa-selected-color-alpha: 0.25;
+  --aa-description-highlight-background-color-rgb: 0 255 255;
+  --aa-description-highlight-background-color-alpha: 0.25;
+  --aa-icon-color-rgb: 119, 119, 163;
+  --aa-panel-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309;
+  --aa-scrollbar-track-background-color-rgb: 44, 46, 64;
+  --aa-scrollbar-thumb-background-color-rgb: var(--aa-background-color-rgb);
 }
 
 /* ==========================================
